src/ParameterView.css
.parameterItem
{
    border: 1px solid;
    height: 10.5em;
    border-radius: .25em;
    padding: .5em;
    margin: .5em;
    width: calc(100% - 1.0em);
}
.parameterItem:focus-within
{
    border: 3px solid blue;
    border-radius: .25em;
}
.param-label
{
    margin: 10px;
}

.param-input
{    
    width: 100%;    
}

.param-column
{
    width: 33%;
}

.parameter-item-grid
{
    margin-top: .5em !important;
}

.checkbox-grid
{
    margin-top: -.75em !important;
    margin-left: 0em;
}
.p-checkbox-label
{
    margin-left: 0em !important; 
}
.parameter-type
{
    font-style: italic;
    font-weight: 500;
}

